# Pixulse-Cloud

./: Procfile  README.md  build.sh  pyproject.toml  render.yaml  requirements.txt
ak/: db.sqlite3  requirements.txt
ak/accounts/: views.py
ak/ak/: asgi.py  settings.py  urls.py  wsgi.py
ak/pcloud/: apps.py  models.py  urls.py  views.py
ak/pcloud/management/commands/: runserver.py
ak/pcloud/migrations/: 0001_initial.py  0002_game_image.py
ak/static/: script.js  style.css
ak/staticfiles/: staticfiles.json  style.422c42f74c98.css  style.b85045fbae87.css
ak/templates/: gamepage.html  home.html  login.html
webrtc_gamestreaming/: package-lock.json  package.json
webrtc_gamestreaming/public/: client.html  client.js  streamer.html
webrtc_gamestreaming/server/: signaling_server.js
