[project]
name = "pixulse-cloud"
version = "1.0.0"
description = "Pixulse Cloud - Gaming platform"
requires-python = ">=3.12"
dependencies = [
    "Django==4.2.7",
    "gunicorn==21.2.0",
    "python-decouple==3.8",
    "Pillow==10.4.0",
    "whitenoise==6.7.0",
    "psycopg2-binary==2.9.10",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
